--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
     "latest": "^0.2.0",
+    "lucide-react": "^0.358.0",
     "n": "^9.2.1",
     "next": "14.1.3",
     "react": "^18",
