--- a/package.json
+++ b/package.json
@@ -10,13 +10,24 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
     "latest": "^0.2.0",
     "lucide-react": "^0.358.0",
+    "mongoose": "^8.2.2",
     "n": "^9.2.1",
     "next": "14.1.3",
+    "next-cloudinary": "^6.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "stable": "^0.1.8"
+    "react-hook-form": "^7.51.1",
+    "stable": "^0.1.8",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
